updated to bootstrap 3

--- a/MomentDatepicker.csproj
+++ b/MomentDatepicker.csproj
@@ -40,12 +40,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include=".gitignore" />
-    <Content Include="Content\bootstrap-responsive.css" />
-    <Content Include="Content\bootstrap-responsive.min.css" />
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\images\glyphicons-halflings-white.png" />
-    <Content Include="Content\images\glyphicons-halflings.png" />
+    <Content Include="Content\bootstrap\bootstrap-theme.css" />
+    <Content Include="Content\bootstrap\bootstrap-theme.min.css" />
+    <Content Include="Content\bootstrap\bootstrap.css" />
+    <Content Include="Content\bootstrap\bootstrap.min.css" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\Prettify\prettify.css" />
     <Content Include="Content\Prettify\Themes\bootstrap.css" />
     <Content Include="Content\Prettify\Themes\desert.css" />
@@ -62,12 +61,15 @@
     <Content Include="nuget\MomentDatepicker.nuspec" />
     <Content Include="nuget\pack.cmd" />
     <Content Include="moment-datepicker\moment-datepicker.d.ts" />
-    <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="moment-datepicker\moment-datepicker.min.js.map">
       <DependentUpon>moment-datepicker.js</DependentUpon>
     </Content>
+    <Content Include="Content\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.eot" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\d.ts\bootstrap\bootstrap.d.ts" />
     <Content Include="Scripts\d.ts\jquery\jquery.d.ts" />
     <Content Include="Scripts\d.ts\knockout\knockout.d.ts" />
@@ -75,8 +77,8 @@
     <Content Include="Scripts\d.ts\underscore\underscore.d.ts" />
     <Content Include="Scripts\jquery-1.9.1.js" />
     <Content Include="Scripts\jquery-1.9.1.min.js" />
-    <Content Include="Scripts\knockout-2.2.1.debug.js" />
-    <Content Include="Scripts\knockout-2.2.1.js" />
+    <Content Include="Scripts\knockout-2.3.0.debug.js" />
+    <Content Include="Scripts\knockout-2.3.0.js" />
     <Content Include="Scripts\moment.i18n\bg.js" />
     <Content Include="Scripts\moment.i18n\ca.js" />
     <Content Include="Scripts\moment.i18n\cv.js" />
