--- a/nuget/MomentDatepicker.nuspec
+++ b/nuget/MomentDatepicker.nuspec
@@ -1,20 +1,20 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>MomentDatepicker</id>
-    <version>1.1.0</version>
-    <authors>andresmoschini</authors>
+    <id>MomentDatepicker-Bootstrap3</id>
+    <version>1.2.0</version>
+    <authors>utguy, andresmoschini</authors>
     <owners>andresmoschini</owners>
     <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
     <projectUrl>http://makingsense.github.com/moment-datepicker/</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>A JavaScript Datepicker that takes advantage of twitter-bootstrap and moment.js. Ready for TypeScript and Knockout</description>
-    <releaseNotes>Update dependencies</releaseNotes>
+    <releaseNotes>Updated for Bootstrap 3</releaseNotes>
     <copyright>Copyright 2013</copyright>
     <tags>Datepicker Bootstrap Moment jQuery Knockout TypeScript</tags>
     <dependencies>
       <dependency id="jQuery" version="[1.7.0,2.0.0)"/>
-      <dependency id="Twitter.Bootstrap" version="[2.0.0,3.0.0)"/>
+      <dependency id="Twitter.Bootstrap" version="[3.0.0,4.0.0)"/>
       <dependency id="Moment.js" version="[2.0.0,3.0.0)"/>
     </dependencies>
   </metadata>
